# itmo_md

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Dockerfile.api  Makefile  README.md  airflow_variables.json  docker-compose.yml  pyproject.toml  setup_airflow_variables.sh
.github/workflows/: ci-cd.yml
airflow/dags/: dbt_pipeline.py  generate_transactions.py  mongodb_to_postgres_etl.py  transactions_etl.py
dbt/: .user.yml  dbt_project.yml  elementary.yml  package-lock.yml  packages.yml
dbt/models/: _models.yml
dbt/models/dm/: dm_fraud_analysis.sql  dm_transaction_summary.sql  schema.yml
dbt/models/dwh/: dwh_transactions_daily.sql  dwh_user_transactions.sql  schema.yml
dbt/models/ods/: ods_transactions.sql  schema.yml
dbt/models/stg/: schema.yml  sources.yml  stg_transactions.sql
dbt/tests/: test_amount_consistency.sql  test_fraud_consistency.sql  test_fraud_rate.sql  test_user_fraud_consistency.sql
grafana/: test_query.sql
grafana/dashboards/: bankshield-dashboard.json  test-simple.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: postgres.yml
reports/: ARCHITECTURE_DIAGRAMS.md  DESIGN_DOC.md  HW1_REPORT.md  HW2_REPORT.md
scripts/: deploy.sh  download_kaggle_data.py  fix_grafana_dashboard.py  run_collector.py  test_dbt_in_airflow.sh
src/bankshield/: __init__.py  api.py  collector.py  kaggle_loader.py
tests/: test_collector.py
